--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "devDependencies": {
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
-    "express": "^4.19.2
+    "express": "^4.19.2"
   }
 }
